Fix height issue for overflow element

--- a/assets/css/resume.css
+++ b/assets/css/resume.css
@@ -11,8 +11,6 @@
     @apply absolute;
     @apply top-0;
     @apply left-0;
-    @apply w-full;
-    @apply h-full;
     @apply opacity-0;
     @apply invisible;
     @apply overflow-hidden;
